feat: Add automatic network device scanner
This commit introduces a new feature that allows users to automatically scan their local network for WLED and Hyperion devices, simplifying the setup process.

### Network Scanning
-   **Device Scanner:** A new `DeviceScanner` class is added to perform an efficient scan of the local `/24` subnet. It works in multiple stages:
    1.  A quick ICMP ping to find responsive hosts.
    2.  A fast port check for common WLED (UDP 4048, 19446) and Hyperion (TCP 19400) ports.
    3.  A detailed check using the new `DeviceDetector` on responsive hosts with open ports.
-   **Device Detector:** The `DeviceDetector` class identifies the device type.
    -   It detects WLED devices by querying their HTTP JSON API on port 80.
    -   It detects Hyperion devices by checking for an open TCP socket on port 19400.
-   **UI Integration:** A "Scan network" button is added to the connection settings screen, which opens a new `DeviceScanDialog`.

### User Interface
-   **Scan Dialog:** The new `DeviceScanDialog` provides a real-time view of the scanning process.
    -   It displays a progress bar, the current IP being scanned, and the total progress percentage.
    -   Found devices appear in a list as they are discovered, allowing the user to select one immediately without waiting for the scan to complete.
-   **Auto-Configuration:** Selecting a device from the scan results automatically configures the connection type (WLED/Hyperion), host address, and the appropriate default port. For WLED, it also sets the recommended protocol (DDP).

### Other Changes
-   **Permissions:** `android:usesCleartextTraffic="true"` is added to the `AndroidManifest.xml` to allow the scanner to communicate with the WLED HTTP API.
-   **Strings:** New string resources for the scanner UI have been added in both English and Russian.
-   **UI Refinements:** The settings screen now uses `key()` to ensure UI components correctly recompose when connection settings are change

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,13 +15,23 @@
   <string name="notification_exit_button">Выход</string>
   <!-- Network scanner -->
   <string name="scanner_title">Привет!</string>
-  <string name="scanner_description">Universal Ambient Light может просканировать вашу сеть для поиска серверов, чтобы вам не пришлось вводить IP-адрес вручную.</string>
+  <string name="scanner_description">Автоматически найти WLED и Hyperion устройства в сети</string>
   <string name="scanner_start_scan_button">Начать сканирование</string>
   <string name="scanner_scan_in_progress_text">Сканирование локальной сети на наличие серверов Hyperion %s</string>
   <string name="scanner_scan_in_progress_button">Сканирование…</string>
   <string name="scanner_no_results">Ничего не найдено %s</string>
   <string name="scanner_retry_button">Повторить</string>
   <string name="scanner_manual_setup_button">Ручная настройка</string>
+  <string name="scanner_scan_devices">Сканировать устройства</string>
+  <string name="scanner_scanning">Сканирование сети…</string>
+  <string name="scanner_found_devices">Найденные устройства:</string>
+  <string name="scanner_no_devices_found">Устройства не найдены</string>
+  <string name="scanner_device_wled">WLED</string>
+  <string name="scanner_device_hyperion">Hyperion</string>
+  <string name="scanner_device_unknown">Неизвестно</string>
+  <string name="scanner_select_device">Выбрать устройство</string>
+  <string name="scanner_device_info">%1$s на %2$s:%3$d</string>
+  <string name="scanner_cancel">Отмена</string>
   <!-- Network Scanner result -->
   <string name="scan_result_title">И победитель…</string>
   <string name="scan_result_description">В честь этого мы включили фиолетовую подсветку %s</string>
