--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,23 @@
   <string name="notification_exit_button">Exit</string>
   <!-- Network scanner -->
   <string name="scanner_title">Hi there!</string>
-  <string name="scanner_description">Universal Ambient Light can scan your network for running servers, so you won\'t have to fiddle with your remote to punch in an ip-address.</string>
+  <string name="scanner_description">Find WLED and Hyperion devices automatically</string>
   <string name="scanner_start_scan_button">Start scan</string>
   <string name="scanner_scan_in_progress_text">Scanning your local network for running hyperion servers %s</string>
   <string name="scanner_scan_in_progress_button">Scanning…</string>
   <string name="scanner_no_results">No results found %s</string>
   <string name="scanner_retry_button">retry</string>
   <string name="scanner_manual_setup_button">Manual setup</string>
+  <string name="scanner_scan_devices">Scan network</string>
+  <string name="scanner_scanning">Scanning network…</string>
+  <string name="scanner_found_devices">Found devices:</string>
+  <string name="scanner_no_devices_found">No devices found</string>
+  <string name="scanner_device_wled">WLED</string>
+  <string name="scanner_device_hyperion">Hyperion</string>
+  <string name="scanner_device_unknown">Unknown</string>
+  <string name="scanner_select_device">Select device</string>
+  <string name="scanner_device_info">%1$s at %2$s:%3$d</string>
+  <string name="scanner_cancel">Cancel</string>
   <!-- Network Scanner result -->
   <string name="scan_result_title">And the winner is…</string>
   <string name="scan_result_description">To celebrate, we have turned all your LEDs purple %s</string>
