feat: Improve stability, add in-app rating, and enhance UX
This commit introduces several key improvements focused on application stability, especially regarding connection handling and background operation. It also adds a new in-app rating flow and other user experience enhancements.

### Stability and Connection Handling
-   **Hyperion FlatBuffers Thread-Safety:** The `HyperionFlatBuffers` client now uses a new `FlatBufferBuilder` instance for each message. This prevents "object serialization must not be nested" errors that could occur from concurrent calls, significantly improving thread safety.
-   **Robust MediaProjection Restart:** The app now better handles cases where the `MediaProjection` token is revoked by the system (e.g., after the device sleeps). It catches the `SecurityException`, prevents a crash, and clears the invalid saved projection data.
-   **WLED Client Error Handling:** The WLED client is now more resilient. When data sending is blocked (e.g., `EPERM` error on a sleeping TV), it immediately unblocks upon screen wake-up (`resetBlocked`) and attempts to resend the last known frame, allowing for a quicker resumption of the ambient effect.
-   **Safe Preference Parsing:** The function for parsing integer values from `SharedPreferences` is now safer and will no longer crash if the stored string is empty or invalid, returning the default value instead.

### User Experience and UI
-   **In-App Rating Flow:**
    -   New "Leave Review" and "Report Issue" buttons have been added to the main screen for quick access.
    -   A custom rating dialog is now shown, asking for a 1-5 star rating.
    -   High ratings (4-5 stars) will direct the user to the Google Play Store to leave a review.
    -   Low ratings (1-3 stars) will prompt the user to report an issue on GitHub, helping to gather feedback and improve the app.
-   **Device Scanner Improvements:** The device scanner logic has been cleaned up for clarity. Code comments and logging have been refined t

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -337,4 +337,15 @@
   <string name="support_project_title">Поддержать проект</string>
   <string name="support_project_message">Спасибо за интерес к поддержке проекта!\n\nВы можете поддержать разработку через:\n• Boosty\n• Криптовалюту (TON)\n• Оставить отзыв в Google Play\n\nНажмите ниже, чтобы увидеть все доступные варианты.</string>
   <string name="support_open_details">Подробнее</string>
+  <string name="report_issue">Сообщить о проблеме</string>
+  <string name="report_issue_summary">Сообщить об ошибке или предложить функцию</string>
+  <string name="leave_review">Оставить отзыв</string>
+  <string name="leave_review_summary">Оценить приложение в Google Play</string>
+  <string name="rating_dialog_title">Оцените Universal Ambient Light</string>
+  <string name="rating_dialog_message">Как бы вы оценили свой опыт использования?</string>
+  <string name="rating_dialog_low_rating_title">Нам жаль это слышать</string>
+  <string name="rating_dialog_low_rating_message">Если вы столкнулись с какими-либо проблемами, пожалуйста, сообщите нам об этом на GitHub. Ваш отзыв помогает нам улучшить приложение.</string>
+  <string name="rating_dialog_report_issue">Сообщить о проблеме</string>
+  <string name="rating_dialog_cancel">Отмена</string>
+  <string name="github_issues_url">https://github.com/vasmarfas/universal-ambient-light/issues</string>
 </resources>
