feat: Add advanced color processing controls
This commit introduces a new color processing pipeline, allowing users to fine-tune the final output of the ambient lighting. Settings for brightness, contrast, saturation, and black/white levels are now available in the app's preferences.

### New Color Processing Engine
- A new `ColorProcessor.kt` utility has been added to handle all color adjustments.
- The engine applies transformations in the following order:
  1.  **Brightness**: Multiplies RGB values.
  2.  **Contrast**: Adjusts colors relative to the midpoint (128).
  3.  **Saturation**: Modifies color intensity without affecting luminance.
  4.  **Black & White Levels**: Remaps the color range, clipping values outside the defined thresholds.
- The processing is applied to both the detailed per-LED data and the single average color mode.

### Settings and Integration
- Five new preferences have been added to the settings screen:
  - **Brightness** (0-200%)
  - **Contrast** (0-200%)
  - **Black Level** (0-100%)
  - **White Level** (0-100%)
  - **Saturation** (0-200%)
- These settings are loaded in `ScreenGrabberService` and passed via `AppOptions` to the `ScreenEncoder`.
- The `ScreenEncoder` now invokes the `ColorProcessor` on the final RGB data before it is sent to the lighting controller.
- English and Russian localizations for the new settings have been included.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -125,6 +125,16 @@
   <string name="pref_summary_framerate">Кадров в секунду для отправки на контроллер</string>
   <string name="pref_title_capture_quality">Качество захвата</string>
   <string name="pref_summary_capture_quality">Разрешение захвата экрана (влияет на производительность)</string>
+  <string name="pref_title_color_brightness">Яркость</string>
+  <string name="pref_summary_color_brightness">Общая яркость (0–200%)</string>
+  <string name="pref_title_color_contrast">Контрастность</string>
+  <string name="pref_summary_color_contrast">Контрастность (0–200%)</string>
+  <string name="pref_title_color_black_level">Уровень черного</string>
+  <string name="pref_summary_color_black_level">Порог отсечки для темных цветов (0–100%). Большие значения отключают светодиоды на темных экранах</string>
+  <string name="pref_title_color_white_level">Уровень белого</string>
+  <string name="pref_summary_color_white_level">Максимальная яркость (0–100%)</string>
+  <string name="pref_title_color_saturation">Насыщенность</string>
+  <string name="pref_summary_color_saturation">Насыщенность цветов (0–200%)</string>
   <string name="battery_optimization_prompt">Чтобы захват/подсветка стабильнее работали в фоне (особенно на TV), рекомендуем отключить оптимизацию батареи для приложения.</string>
   <string-array name="pref_list_capture_quality">
     <item>Низкое (64px)</item>
