feat: Add Camera Capture mode with perspective correction
This commit introduces a major new feature: the ability to use the device's camera as a capture source instead of the screen. This allows the application to generate ambient lighting for any video source (e.g., a non-smart TV, game console) by pointing the camera at the screen.

The implementation includes a new camera capture engine with perspective correction and a dedicated UI for setting up the capture area.

### Camera Capture Engine (`CameraEncoder`)
- A new `CameraEncoder.kt` class has been added, which is responsible for capturing frames from the camera using `CameraX`.
- It performs perspective correction by mapping a user-defined quadrilateral (4 corners) from the camera view onto a rectangular output buffer. This corrects for the camera not being perfectly aligned with the TV screen.
- The engine handles image rotation, conversion from RGBA to RGB, and integrates with the existing color processing and network sending pipeline (`HyperionThread`).
- The `ScreenGrabberService` has been updated to manage the lifecycle of `CameraEncoder` alongside the existing `ScreenEncoder`. It now handles new actions (`ACTION_START_CAMERA`) and required permissions (`FOREGROUND_SERVICE_TYPE_CAMERA`).

### Camera Setup UI
- A new settings screen, `CameraSetupScreen.kt`, allows the user to configure the capture area.
- It displays a live camera preview and an interactive overlay with four draggable corners. Users can drag these corners to align them with the corners of their physical TV screen.
- The UI includes options to reset the corners to a default position and save the configuration.
- The main screen now shows a live camera preview with the defined corner overlay when camera mode is active, providing visual feedback without needing to be in the setup screen.

### Settings and Integration
- A new "Capture Source" preference has been added to the settings, allowing users to switch between "Screen" and "Camera" mod

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -119,6 +119,27 @@
   <string name="pref_summary_reconnect">Автоматическое переподключение при потере связи</string>
   <string name="pref_title_reconnect_delay">Задержка переподключения</string>
   <string name="pref_summary_reconnect_delay">Секунды ожидания перед попыткой переподключения</string>
+  <!-- Capture source -->
+  <string name="pref_title_capture_source">Источник захвата</string>
+  <string name="pref_summary_capture_source">Захват экрана или внешняя камера</string>
+  <string-array name="pref_list_capture_source">
+    <item>Экран</item>
+    <item>Камера</item>
+  </string-array>
+  <string-array name="pref_list_capture_source_values">
+    <item>screen</item>
+    <item>camera</item>
+  </string-array>
+  <string name="pref_title_camera_setup">Настройка углов камеры</string>
+  <string name="pref_summary_camera_setup">Настройте 4 угла для совмещения с экраном ТВ в кадре камеры</string>
+  <string name="camera_setup_title">Настройка камеры</string>
+  <string name="camera_setup_instruction">Перетащите 4 угла, чтобы совместить их с краями экрана ТВ</string>
+  <string name="camera_setup_save">Сохранить</string>
+  <string name="camera_setup_reset">Сбросить</string>
+  <string name="camera_permission_required">Для режима камеры необходимо разрешение на использование камеры</string>
+  <string name="camera_grant_permission">Дать разрешение</string>
+  <string name="camera_capturing_status">Камера захватывает…</string>
+  <string name="camera_not_available">Камера недоступна на этом устройстве</string>
   <!-- Capturing settings -->
   <string name="pref_group_capturing">Захват</string>
   <string name="pref_title_framerate">Частота захвата</string>
