--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,27 @@
   <string name="pref_summary_reconnect">Automatic reconnect to hyperion on lost connection</string>
   <string name="pref_title_reconnect_delay">Reconnect Delay</string>
   <string name="pref_summary_reconnect_delay">The number of seconds to wait before trying to reconnect</string>
+  <!-- Capture source -->
+  <string name="pref_title_capture_source">Capture Source</string>
+  <string name="pref_summary_capture_source">Screen capture or external camera</string>
+  <string-array name="pref_list_capture_source">
+    <item>Screen</item>
+    <item>Camera</item>
+  </string-array>
+  <string-array name="pref_list_capture_source_values">
+    <item>screen</item>
+    <item>camera</item>
+  </string-array>
+  <string name="pref_title_camera_setup">Camera Corner Setup</string>
+  <string name="pref_summary_camera_setup">Adjust the 4 corners to match your TV screen in the camera view</string>
+  <string name="camera_setup_title">Camera Setup</string>
+  <string name="camera_setup_instruction">Drag the 4 corners to match the edges of your TV screen</string>
+  <string name="camera_setup_save">Save</string>
+  <string name="camera_setup_reset">Reset</string>
+  <string name="camera_permission_required">Camera permission is required for camera capture mode</string>
+  <string name="camera_grant_permission">Grant Permission</string>
+  <string name="camera_capturing_status">Camera is capturing…</string>
+  <string name="camera_not_available">Camera is not available on this device</string>
   <!-- Capturing settings -->
   <string name="pref_group_capturing">Capturing</string>
   <string name="pref_title_framerate">Capture Rate</string>
