feat: Optimize color processing and add disable option
This commit significantly optimizes the color processing pipeline for better performance and introduces a new setting to disable it entirely.

### Color Processing Optimization
- The `ColorProcessor.processRgbData` method has been heavily refactored to reduce overhead and improve speed.
- **LUT-based Processing:** When saturation is at its default value (100%), a much faster Look-Up Table (LUT) is now used. This avoids redundant per-pixel calculations for brightness, contrast, and levels by pre-computing the results for all 256 possible values of a color channel.
- **Reduced Allocations:** The main processing loop has been rewritten to use primitive `Float` types and avoid object allocations, minimizing garbage collection pressure.
- **Early Exit:** The function now immediately returns if color processing is disabled or if all color settings are at their default values, saving unnecessary computation.

### User Interface and Settings
- **Disable Color Processing:** A new "Color Processing" checkbox has been added to the "Color" settings category.
- This allows users to completely disable all color adjustments (brightness, contrast, saturation, etc.), which can improve performance on less powerful devices.
- The individual color adjustment settings (Brightness, Contrast, etc.) are now dynamically shown or hidden based on the state of this new checkbox.

### Code and Localization
- The `AppOptions` data class now includes a `colorProcessingEnabled` flag to control the new behavior.
- Added new string resources for the "Color Processing" setting in both English (`values/strings.xml`) and Russian (`values-ru/strings.xml`).
- Removed an obsolete tip from the Russian `README_RU.md`.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -156,6 +156,8 @@
   <string name="pref_summary_color_white_level">Максимальная яркость (0–100%)</string>
   <string name="pref_title_color_saturation">Насыщенность</string>
   <string name="pref_summary_color_saturation">Насыщенность цветов (0–200%)</string>
+  <string name="pref_title_color_processing_enabled">Обработка цвета</string>
+  <string name="pref_summary_color_processing_enabled">Включить настройку яркости, контрастности и насыщенности (может влиять на производительность)</string>
   <string name="battery_optimization_prompt">Чтобы захват/подсветка стабильнее работали в фоне (особенно на TV), рекомендуем отключить оптимизацию батареи для приложения.</string>
   <string-array name="pref_list_capture_quality">
     <item>Низкое (64px)</item>
