--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -94,9 +94,11 @@
   <string name="led_layout_capture_margin_bottom_help">0–40%. Отступ от нижнего края экрана.</string>
   <string name="led_layout_capture_margin_left_label">Отступ слева (%)</string>
   <string name="led_layout_capture_margin_left_help">0–40%. Отступ от левого края экрана.</string>
-  <string name="led_layout_offset_label">Смещение LED (шагов по периметру)</string>
-  <string name="led_layout_offset_help">Положительное — по направлению обхода, отрицательное — против.</string>
-  <string name="led_layout_dialog_title">Настройки раскладки</string>
+    <string name="led_layout_offset_label">Смещение LED (шагов по периметру)</string>
+    <string name="led_layout_offset_help">Положительное — по направлению обхода, отрицательное — против.</string>
+    <string name="led_layout_scan_depth_label">Глубина сканирования (%)</string>
+    <string name="led_layout_scan_depth_help">Глубина области усреднения цвета (1-50%).</string>
+    <string name="led_layout_dialog_title">Настройки раскладки</string>
   <string name="led_layout_legend_title">Легенда:</string>
   <string name="led_layout_legend_first_led">LED #1 (первый)</string>
   <string name="led_layout_legend_active_leds">Активные LED</string>
@@ -210,6 +212,7 @@
   <string name="error_adalight_connection_lost">Связь с Adalight потеряна, остановка захвата</string>
   <string name="error_foreground_blocked">Это устройство блокирует фоновый захват экрана. Разрешите Universal Ambient Light работу в фоне или автозапуск</string>
   <string name="error_media_projection_denied">В доступе к экрану отказано. Пожалуйста, разрешите доступ при запросе</string>
+  <string name="error_screen_recording_not_available">Запись экрана недоступна на этом устройстве</string>
   <string name="toast_must_give_permission">Необходимо разрешение на запись экрана.</string>
   <string name="message_service_started">Нажмите Назад чтобы свернуть. Захват экрана продолжится в фоне</string>
   <string name="error_no_host_name_extra">Странно, здесь ожидалось имя хоста</string>
