--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,9 +94,11 @@
   <string name="led_layout_capture_margin_bottom_help">0–40%. Bottom edge offset from screen.</string>
   <string name="led_layout_capture_margin_left_label">Left capture margin (%)</string>
   <string name="led_layout_capture_margin_left_help">0–40%. Left edge offset from screen.</string>
-  <string name="led_layout_offset_label">LED offset (steps along perimeter)</string>
-  <string name="led_layout_offset_help">Positive – along layout direction, negative – opposite.</string>
-  <string name="led_layout_dialog_title">Layout settings</string>
+    <string name="led_layout_offset_label">LED offset (steps along perimeter)</string>
+    <string name="led_layout_offset_help">Positive – along layout direction, negative – opposite.</string>
+    <string name="led_layout_scan_depth_label">Scan Depth (%)</string>
+    <string name="led_layout_scan_depth_help">Depth of the area to average colors from (1-50%).</string>
+    <string name="led_layout_dialog_title">Layout settings</string>
   <string name="led_layout_legend_title">Legend:</string>
   <string name="led_layout_legend_first_led">LED #1 (first)</string>
   <string name="led_layout_legend_active_leds">Active LEDs</string>
@@ -210,6 +212,7 @@
   <string name="error_adalight_connection_lost">The connection to your Adalight device has been lost, now stopping the grabber</string>
   <string name="error_foreground_blocked">This device blocks screen capture services. Please check your device settings and allow Universal Ambient Light to run in the foreground, or grant it auto-start permission</string>
   <string name="error_media_projection_denied">Screen recording permission was denied. Please grant permission when prompted</string>
+  <string name="error_screen_recording_not_available">Screen recording is not available on this device</string>
   <string name="toast_must_give_permission">Permission must be granted to record screen data.</string>
   <string name="message_service_started">Press Back to close the app. Your screen content will continue to be sent to Hyperion</string>
   <string name="error_no_host_name_extra">That\'s weird, expected a hostname here</string>
